# vita-save-sync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  vitadb-submission.txt
.github/workflows/: build.yml  hub.yml
c/: tai.c  v2d.h
c/sys/: ioctl.h
docs/: MEMORY.md  build-process.md  project-overview.md  sqlite-vfs.md  version-bumping.md
save-sync-hub/: .gitignore  index.html  package.json  pnpm-lock.yaml
save-sync-hub/src/: App.svelte
save-sync-hub/src-tauri/: Cargo.toml  tauri.conf.json
save-sync-hub/src-tauri/capabilities/: default.json
save-sync-hub/src-tauri/icons/: icon.icns
save-sync-hub/src-tauri/src/: api.rs  backup.rs  config.rs  emulator_paths.rs  lib.rs  main.rs  sync.rs
save-sync-hub/src/lib/: CloudList.svelte  SaveList.svelte  Settings.svelte  Sidebar.svelte
server/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: index.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.ts  devices.ts  manifest.ts  saves.ts  status.ts
server/src/storage/: disk.ts
src/: api.rs  config.rs  constant.rs  emulator.rs  lib.rs  sync.rs  tai.rs  ui.rs  utils.rs
src/ui/: ui_cloud.rs  ui_desktop.rs  ui_dialog.rs  ui_settings.rs  ui_titles.rs
src/ui/ui_titles/: save_menu.rs
src/ui/ui_titles/game_menu/: game_list.rs
src/ui/ui_titles/save_menu/save_list/: save_list_cloud.rs  save_list_local.rs
