[package]
name = "vita-save-cloud"
version = "0.1.0"
edition = "2021"
# Renamed product: Save Sync — see [package.metadata.vita] below

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
ring = { git = "https://github.com/vita-rust/ring", branch = "v0.16.20-vita" }

[dependencies]
sha2 = "0.10.8"
rustls = "=0.21.7"
sct = "=0.7.0"
ring = "=0.16.20"
rustls-webpki = "=0.101.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
ureq = { version = "=2.9.1", default-features = false, features = ["tls", "json"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
log = { version = "0.4.20", features = ["std"]}
zip = { version = "0.6.6", default-features = false, features = ["deflate", "deflate-zlib", "deflate-miniz", "time"] }
miniz_oxide = "=0.7.1"
flate2 = "=1.0.28"
base64 = "0.21.5"
md5 = "0.7.0"

[build-dependencies]
cc = "1.0"

[profile.release]
panic = "unwind"
lto = true
opt-level = 3

[package.metadata.vita]
# A unique identifier for your project. 9 chars, alphanumeric.
title_id = "SAVSYNC01"
# A title that will be shown on a bubble. Optional, will take the crate name as the default
title_name = "Save Sync"
# Optional. A path to static files relative to the project.
assets = "assets"
# Optional, this is the default
build_std = "std,panic_unwind"
# Optional, this is the default
vita_strip_flags = ["-g"]
# Optional, this is the default
vita_make_fself_flags = []
# Optional, this is the default
vita_mksfoex_flags = ["-d", "ATTRIBUTE2=12"]
